@@ -1,6 +1,8 @@
 package de.hbrs.easyjob.services;
 
+import de.hbrs.easyjob.controllers.ValidationController;
 import de.hbrs.easyjob.entities.*;
+import de.hbrs.easyjob.repositories.BrancheRepository;
 import de.hbrs.easyjob.repositories.JobRepository;
 import de.hbrs.easyjob.repositories.OrtRepository;
 import de.hbrs.easyjob.repositories.UnternehmenRepository;
@@ -17,7 +19,6 @@ import javax.transaction.Transactional;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class UnternehmenService {
@@ -26,22 +27,28 @@ public class UnternehmenService {
     @PersistenceContext
     private EntityManager entityManager;
     private final JobRepository jobRepository;
+    private final BrancheRepository brancheRepository;
 
     @Autowired
-    public UnternehmenService(UnternehmenRepository unternehmenRepository, OrtRepository ortRepository, JobRepository jobRepository) {
+    public UnternehmenService(UnternehmenRepository unternehmenRepository, OrtRepository ortRepository, JobRepository jobRepository, BrancheRepository brancheRepository) {
         this.unternehmenRepository = unternehmenRepository;
         this.ortRepository = ortRepository;
         this.jobRepository = jobRepository;
+        this.brancheRepository = brancheRepository;
     }
     public Unternehmen findByName(String name) {
         return unternehmenRepository.findByName(name);
     }
     public Unternehmen saveUnternehmen(Unternehmen unternehmen) {
+        if(unternehmen.getName() == null || unternehmen.getName().isEmpty()){
+            return null;
+        }
         return unternehmenRepository.save(unternehmen);
     }
     public Unternehmen findByID(Integer id){
-        return unternehmenRepository.findById(id).get();
+        return unternehmenRepository.findById(id).orElse(null);
     }
+
     public int anzahlJobs(Unternehmen unternehmen){
         return jobRepository.countByUnternehmenId_Unternehmen(unternehmen.getId_Unternehmen());
     }
@@ -52,15 +59,19 @@ public class UnternehmenService {
     }
     @Transactional
     public Unternehmen savenewUnternehmen(Unternehmen unternehmen, Unternehmensperson unternehmensperson) {
-        Set<Ort> aktualisierteStandorte = new HashSet<>();
-        for (Ort ort : unternehmen.getStandorte()) {
-            Ort gefundenerOrt = ortRepository.findByPLZAndOrt(ort.getPLZ(),ort.getOrt());
-            aktualisierteStandorte.add(gefundenerOrt);
+        if (ValidationController.isValidUnternehmen(unternehmen, ortRepository, brancheRepository)) {
+            Set<Ort> aktualisierteStandorte = new HashSet<>();
+            for (Ort ort : unternehmen.getStandorte()) {
+                Ort gefundenerOrt = ortRepository.findByPLZAndOrt(ort.getPLZ(), ort.getOrt());
+                aktualisierteStandorte.add(gefundenerOrt);
+            }
+            unternehmen.setStandorte(aktualisierteStandorte);
+            unternehmen.setUnternehmensperson(unternehmensperson);
+            unternehmen.setAktiv(true);
+            return unternehmenRepository.save(unternehmen);
+        } else {
+            return null;
         }
-        unternehmen.setStandorte(aktualisierteStandorte);
-        unternehmen.setUnternehmensperson(unternehmensperson);
-        unternehmen.setAktiv(true);
-        return unternehmenRepository.save(unternehmen);
     }
     public List<Branche> getAllBranchen() {
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
@@ -68,7 +79,7 @@ public class UnternehmenService {
         Root<Unternehmen> unternehmen = cq.from(Unternehmen.class);
         cq.select(unternehmen.get("branchen")).distinct(true);
         List<Branche> branches = entityManager.createQuery(cq).getResultList();
-        return branches.stream().distinct().collect(Collectors.toList());
+        return branches.stream().distinct().toList();
     }
 
     public List<Job> getAllJobs(Integer unternehmenId) {
